fix spacing on sign in card

--- a/src/views/SignIn/SignIn.css
+++ b/src/views/SignIn/SignIn.css
@@ -1,10 +1,6 @@
 .sign-in__card {
-    height: 350px;
-    margin-top: 150px;
     position: relative;
     width: 450px;
-    position: relative;
-    border-radius: 8px;
     opacity: 0;
     transition: all 0.3s;
 }
@@ -43,7 +39,7 @@
     border-radius: 500px;
     cursor: pointer;
     padding: 5px 15px;
-    margin: 15px auto 0;
+    margin: 15px auto 15px;
     transition: all 0.4s;
 }
 
